@@ -6,6 +6,6 @@ die() {
 }
 
 cd /root/git/funtoo-overlay || die "couldn't chdir"
-./funtoo/scripts/gentoo-update.sh || die "gentoo update failed"
 git pull
+./funtoo/scripts/gentoo-update.sh || die "gentoo update failed"
 ./funtoo/scripts/funtoo-update.sh || die "funtoo update failed"
