@@ -2,8 +2,10 @@ AUX dhcpcd.initd-nonet-5.1.2-r1 303 RMD160 405ad4b2f2138dda8da3cf84285ed7c9582d3
 DIST dhcpcd-5.1.2.tar.bz2 64570 RMD160 d6eb56c1164526cf987be8ea6d8705286be09585 SHA1 a68915e7033e3b196d28f97e70aadc0469a20031 SHA256 0ea254c78cebeed2d322543206a17b93a594bb59782c6d14723e135e8de6766a
 DIST dhcpcd-5.2.5.tar.bz2 68408 RMD160 40e026159f8d3525ca25b6f607f9634b077ebd27 SHA1 f428a796d5c8c2eaf46b33e2f9d88e04027349f0 SHA256 e22d13494907973891bd158cfcfd764f49e6013735e220c040e58f7d4e850337
 DIST dhcpcd-5.2.6.tar.bz2 68489 RMD160 8c3d9d97973ea73583b2615df870becd88df9d3e SHA1 40219474d02d28e054aa6c10985ce59a070ac0c3 SHA256 fcba1dc87d8cb4b47a9b33ac7eb6fd1059026d524023374016abfe7ac98b8562
+DIST dhcpcd-5.2.7.tar.bz2 69019 RMD160 383eabbb3c80d499a3e0fcae7c805d24c92ea2a8 SHA1 510f7360edb426a0dafcf840aa1f35d75636a697 SHA256 99975021a5f2a02a66ce2a62a61ddda28e1d3927fc67d07b5b86adf79417c36b
 EBUILD dhcpcd-5.1.2-r1.ebuild 2315 RMD160 462fa8bebcb60507ccdac633e9545e88947e88c2 SHA1 b2fc98d82f9fc8df477fa457f7933e94c62d3e9f SHA256 24ac60eb8075442660ab70390d58a32d96988474bf5820dcfcb3c703cf6502d8
 EBUILD dhcpcd-5.2.5.ebuild 2364 RMD160 91f3fa6fc32723d1ec4de928e5c99d6214167ee2 SHA1 9c9a7317078b857913d8832d90014e0c1c18cfa7 SHA256 78e183d46cdb5b9b3815ae787f912e830b06173ec6399d963f8f40452cf6d17a
 EBUILD dhcpcd-5.2.6.ebuild 2364 RMD160 91f3fa6fc32723d1ec4de928e5c99d6214167ee2 SHA1 9c9a7317078b857913d8832d90014e0c1c18cfa7 SHA256 78e183d46cdb5b9b3815ae787f912e830b06173ec6399d963f8f40452cf6d17a
-MISC ChangeLog 38046 RMD160 1c2c8b1e0fcbcaca6943c80c7f6f3ea851ee6bf6 SHA1 e4c6eb67cecbd3105dcb47c7516dba03a1d82567 SHA256 760d95b859fb99e857b1e3457e3a7f6e1947529e1543c61fe712e2639030f3c4
+EBUILD dhcpcd-5.2.7.ebuild 2364 RMD160 91f3fa6fc32723d1ec4de928e5c99d6214167ee2 SHA1 9c9a7317078b857913d8832d90014e0c1c18cfa7 SHA256 78e183d46cdb5b9b3815ae787f912e830b06173ec6399d963f8f40452cf6d17a
+MISC ChangeLog 38207 RMD160 ac218d76a2803d90580a6335bc94a0f12e0ca3b0 SHA1 810a7d7d51a9cd853b1f99f666c4bd8d1227a64c SHA256 ddc6383d7ce5a5380b00fa42955279ecec95285898816883c8f4c75a91d3a6fd
 MISC metadata.xml 352 RMD160 28081c66d87367e04ffcb2899dd0c58dc9201d16 SHA1 e178173ac418b4189a56df98fee2911540a19f86 SHA256 22a4bf8bcaff216e4cf884e51cefa3dfa7645416d9107568ed57682409c80634
